--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "automation",
     "multi-device"
   ],
-  "homepage": "https://github.com/WhiskeySockets/Baileys",
+  "homepage": "https://github.com/DellyaOktavani/B",
   "repository": {
     "url": "git+ssh://git@github.com/WhiskeySockets/Baileys.git"
   },
